<resources>
    <string name="app_name">CleanArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have">Don`t you have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add">Create</string>
    <string name="delete">Delete</string>
    <string name="title">Add</string>
    <string name="_0">0</string>
</resources>